--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "heyloyalty/hl-phpclient",
     "description": "php client for heyloyalty rest api",
+  "license":"MIT",
+  "homepage":"https://github.com/Heyloyalty/api",
   "require-dev": {
     "phpunit/phpunit": "~4.3"
   },
