--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "php client for heyloyalty rest api",
   "license":"MIT",
   "homepage":"https://github.com/Heyloyalty/api",
+  "version":"1.0.0",
   "require-dev": {
     "phpunit/phpunit": "~4.3"
   },
