--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
     "name": "heyloyalty/hl-phpclient",
     "description": "php client for heyloyalty rest api",
-  "license":"MIT",
+  "license": "MIT",
   "homepage":"https://github.com/Heyloyalty/api",
   "version":"1.0.0",
+  "type":"library",
+  "time":"2016-06-20",
+  "keywords":["rest","api","email","marketing"],
   "require-dev": {
     "phpunit/phpunit": "~4.3"
   },
