--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,37 @@
 {
-    "name": "heyloyalty/hl-phpclient",
-    "description": "php client for heyloyalty rest api",
+  "name": "heyloyalty/hl-phpclient",
+  "description": "php client for heyloyalty rest api",
   "license": "MIT",
-  "homepage":"https://github.com/Heyloyalty/api",
-  "version":"1.0.0",
-  "type":"library",
-  "time":"2016-06-20",
-  "keywords":["rest","api","email","marketing"],
+  "homepage": "https://github.com/Heyloyalty/api",
+  "version": "1.0.0",
+  "type": "library",
+  "time": "2016-06-20",
+  "keywords": [
+    "rest",
+    "api",
+    "email",
+    "marketing"
+  ],
   "require-dev": {
     "phpunit/phpunit": "~4.3"
   },
-    "authors": [
-        {
-            "name": "skourene",
-            "email": "skou.rene@gmail.com"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {},
-  "autoload" :  {
+  "authors": [
+    {
+      "name": "René Skou",
+      "email": "skou.rene@gmail.com",
+      "homepage": "https://github.com/SkouRene",
+      "role": "System developer"
+    }
+  ],
+  "support": {
+    "email":"support@heyloyalty.com",
+    "wiki":"https://github.com/Heyloyalty/api/wiki",
+    "issues":"https://github.com/SkouRene/HL-phpclient/issues",
+    "docs":"https://github.com/SkouRene/HL-phpclient",
+  },
+  "minimum-stability": "dev",
+  "require": {},
+  "autoload": {
     "psr-4": {
       "Phpclient\\": "src/HL-phpclient/"
     }
