--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "heyloyalty/hl-phpclient",
   "description": "php client for heyloyalty rest api",
-  "license": "MIT",
+  "license": "GPL-2.0",
   "homepage": "https://github.com/Heyloyalty/api",
   "version": "1.0.0",
   "type": "library",
