--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
+sudo: required
+
 language: php
 
 php:
   - 5.4
   - 5.5
   - 5.6
+
+services:
+- docker
 
 before_install:
   - composer self-update
