--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "marketing"
   ],
   "require" : {
-    "php": ">=5.4"
+    "php": ">=5.4",
+    "ext-curl":"*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4|~5"
