--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ before_install:
 
 install:
   - travis_retry composer install --no-interaction --prefer-source
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
