--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,7 @@ before_install:
 
 install:
   - travis_retry composer install --no-interaction --prefer-source
+script:
+    - vendor/bin/phpunit --coverage-clover=coverage.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
