--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "heyloyalty/hl-phpclient",
+  "name": "rochadk/hl-phpclient",
   "description": "php client for heyloyalty rest api",
   "license": "GPL-2.0",
   "homepage": "https://github.com/Heyloyalty/api",
@@ -11,7 +11,7 @@
     "marketing"
   ],
   "require" : {
-    "php": ">=5.5",
+    "php": ">=5.3",
     "ext-curl":"*"
   },
   "require-dev": {
@@ -23,7 +23,13 @@
       "email": "skou.rene@gmail.com",
       "homepage": "https://github.com/SkouRene",
       "role": "System developer"
-    }
+    },
+	{
+		"name" : "Ole Kallehave",
+		"email" : "ole@rocha.dk",
+		"homepage" : "http://www.rocha.dk",
+		"role" : "Tweaker"
+	}
   ],
   "support": {
     "email":"support@heyloyalty.com",
